# rules_rust

./: MODULE.bazel
bindgen/: BUILD.bazel  extension.bzl  repositories.bzl  transitive_repositories.bzl
bindgen/private/: bindgen.bzl
bindgen/toolchain/: BUILD.bazel
examples/bindgen/: BUILD.bazel  shared.rs
examples/bindgen/shared/: BUILD.bazel  greeting.h  hello.c  hello.h  hello.rs
