load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

toolchain_type(
    name = "toolchain_type",
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "@rules_rust//bindgen/3rdparty:bzl_lib",
        "@rules_rust//bindgen/private:bzl_lib",
        "@rules_rust//rust:bzl_lib",
    ],
)

alias(
    name = "default_bindgen_toolchain_impl",
    actual = "//bindgen/toolchain:default_bindgen_toolchain_impl",
)

alias(
    name = "default_bindgen_toolchain",
    actual = "//bindgen/toolchain:default_bindgen_toolchain",
)
